# MicroBundlePillarTrack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: coverage_test.yml
finetune_SAM/: README.md  finetune_microbundle_SAM_script.py
src/microbundlepillartrack/: create_pillar_mask.py  image_analysis.py  microbundle_SAM_Type1_pillars.pth  microbundle_SAM_Type2_pillars.pth  pillar_analysis.py
src/microbundlepillartrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_create_pillar_mask.py  test_image_analysis.py  test_pillar_analysis.py
tests/files/example_pillar_frame0_not_valley/masks/: pillar_mask_1.txt  pillar_mask_2.txt
tests/files/example_pillar_frame0_not_valley/movie/: 0000.TIF  0001.TIF  0002.TIF  0003.TIF  0004.TIF  0005.TIF  0006.TIF  0007.TIF  0008.TIF  0009.TIF  0010.TIF  0011.TIF  0012.TIF  0013.TIF  0014.TIF  0015.TIF  0016.TIF  0017.TIF  0018.TIF  0019.TIF  0020.TIF  0021.TIF  0022.TIF  0023.TIF  0024.TIF  0025.TIF  0026.TIF  0027.TIF  0028.TIF  0029.TIF  0030.TIF  0031.TIF  0032.TIF  0033.TIF  0034.TIF  0035.TIF  0036.TIF  0037.TIF  0038.TIF  0039.TIF  (+11 more)
tests/files/real_example_SAM_type1/movie/: 0000.TIF
tests/files/real_example_SAM_type1_fail/movie/: 0000.TIF
tests/files/real_example_SAM_type2/movie/: 0000.TIF
tests/files/real_example_SAM_type2_fail/movie/: 0000.TIF
tests/files/real_example_pillar_short_split/masks/: pillar_mask_2.txt
tests/files/real_example_pillar_super_short_cropped_tissue/masks/: pillar_mask_1.txt  pillar_mask_2.txt
tests/files/real_example_pillar_super_short_cropped_tissue/movie/: 0000_c.TIF
tests/files/real_example_pillar_super_short_inverted_colors/masks/: pillar_mask_1.txt
tests/files/real_example_pillar_super_short_inverted_colors/movie/: 0000.TIF
tutorials/: output_summary_reults_csv.py  run_code_pillar.py  run_code_pillar_batch.py  text_file_to_csv_file.py  tif_sequence_to_TIFF_frames.py
tutorials/files/tutorial_example/masks/: pillar_mask_1.txt  pillar_mask_2.txt
(+28 files in other folders)
